[project]
name = "portfolio-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.55.0",
    "yfinance>=1.0",
]
